--- a/proyecto/src/views/layouts/main.handlebars
+++ b/proyecto/src/views/layouts/main.handlebars
@@ -41,7 +41,7 @@
                     <a href="/api/carts">Carrito (<span id="cart-count">0</span>)</a>
                 </li>
                 <li>
-                    <a href="/login" class="login-button">
+                    <a href="/sessions" class="login-button">
                         <i class="fas fa-sign-in-alt"></i> Log In
                     </a>
                 </li>
