--- a/proyecto/src/views/realTimeEvents.handlebars
+++ b/proyecto/src/views/realTimeEvents.handlebars
@@ -11,7 +11,7 @@
 
 <h2>Eventos</h2>
 <div id="event-list" class="event-list">
-    <!-- Las tarjetas de eventos se agregarán aquí dinámicamente -->
+    <!-- Las tarjetas de eventos se deberían agregar -->
 </div>
 
 <!-- Carga de Socket.IO -->
