--- a/proyecto/src/views/layouts/main.handlebars
+++ b/proyecto/src/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
             </ul>
             <ul class="nav-right">
                 <li>
-                    <a href="http://localhost:8080/chat" class="wsp-button">
+                    <a href="http://localhost:8080" class="wsp-button">
                         <i class="fab fa-whatsapp"></i> WhatsApp
                     </a>
                 </li>
