--- a/proyecto/src/views/auth.handlebars
+++ b/proyecto/src/views/auth.handlebars
@@ -1,12 +1,3 @@
-<!-- views/auth.handlebars -->
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/auth.css"> <!-- Asegúrate de tener la ruta correcta -->
-    <title>Autenticación</title>
-</head>
 <body>
     <div class="container">
         <div class="form-container" id="form-container">
@@ -36,6 +27,5 @@
             </div>
         </div>
     </div>
-    <script src="/js/auth.js"></script> <!-- Archivo JavaScript para manejar la interacción -->
+    <script src="/js/auth.js"></script>
 </body>
-</html>
