--- a/proyecto/src/views/login.handlebars
+++ b/proyecto/src/views/login.handlebars
@@ -7,7 +7,7 @@
                     <h2>Login</h2>
                     <input type="email" id="loginEmail" placeholder="Email" required>
                     <input type="password" id="loginPassword" placeholder="Contraseña" required>
-                    <button type="button" onclick="loginUser()">Iniciar sesión</button>
+                    <button type="button" id="signInBtn">Iniciar sesión</button>
                 </form>
 
                 <!-- Formulario de Registro -->
@@ -18,7 +18,7 @@
                     <input type="email" id="registerEmail" placeholder="Email" required>
                     <input type="number" id="age" placeholder="Age" required>
                     <input type="password" id="registerPassword" placeholder="Password" required>
-                    <button type="button" onclick="registerUser()">Registrarse</button>
+                    <button type="button" id="signUpBtn">Registrarse</button>
                 </form>
             </div>
 
