fix users and events

--- a/proyecto/src/views/layouts/main.handlebars
+++ b/proyecto/src/views/layouts/main.handlebars
@@ -38,11 +38,16 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/api/carts">Carrito (<span id="cart-count">0</span>)</a>
+                    <a href="/cart" id="cart-link">Carrito (<span id="cart-count">0</span>)</a>
                 </li>
                 <li>
-                    <a href="/sessions" class="login-button">
-                        <i class="fas fa-sign-in-alt"></i> Log In
+                    <a href="sessions/login" class="login-button">
+                        <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
+                    </a>
+                </li>
+                <li>
+                    <a href="sessions/register" class="register-button">
+                        <i class="fas fa-user-plus"></i> Registrarse
                     </a>
                 </li>
             </ul>
@@ -110,4 +115,3 @@
     </script>
 </body>
 </html>
-
