--- a/proyecto/src/views/auth.handlebars
+++ b/proyecto/src/views/auth.handlebars
@@ -4,25 +4,23 @@
             <!-- Formulario de Iniciar Sesión -->
             <div class="form" id="login-form">
                 <h2>Iniciar Sesión</h2>
-                <form id="login" method="POST" action="/sessions/login">
+                <form id="login" method="POST" action="/api/auth/login">
                     <input type="email" name="email" placeholder="Correo Electrónico" required>
                     <input type="password" name="password" placeholder="Contraseña" required>
                     <button type="submit">Iniciar Sesión</button>
-                    <p>¿No tienes cuenta? <a href="/sessions/register" id="toggle">Regístrate</a></p>
+                    <p>¿No tienes cuenta? <a href="/api/auth/register" id="toggle">Regístrate</a></p>
                 </form>
             </div>
 
             <!-- Formulario de Registro -->
             <div class="form" id="register-form">
                 <h2>Registrarse</h2>
-                <form id="register" method="POST" action="/sessions/register">
+                <form id="register" method="POST" action="/api/auth/register">
                     <input type="text" name="first_name" placeholder="Nombre" required>
-                    <input type="text" name="last_name" placeholder="Apellido" required>
                     <input type="email" name="email" placeholder="Correo Electrónico" required>
-                    <input type="number" name="age" placeholder="Edad" required>
                     <input type="password" name="password" placeholder="Contraseña" required>
                     <button type="submit">Registrar</button>
-                    <p>¿Ya tienes cuenta? <a href="/sessions/login" id="toggle-back">Inicia Sesión</a></p>
+                    <p>¿Ya tienes cuenta? <a href="/api/auth/login" id="toggle-back">Inicia Sesión</a></p>
                 </form>
             </div>
         </div>
