--- a/proyecto/src/views/login.handlebars
+++ b/proyecto/src/views/login.handlebars
@@ -13,10 +13,8 @@
                 <!-- Formulario de Registro -->
                 <form id="registerForm" class="form register-form">
                     <h2>Sign Up</h2>
-                    <input type="text" id="firstName" placeholder="First Name" required>
-                    <input type="text" id="lastName" placeholder="Last Name" required>
+                    <input type="text" id="Name" placeholder="Name" required>
                     <input type="email" id="registerEmail" placeholder="Email" required>
-                    <input type="number" id="age" placeholder="Age" required>
                     <input type="password" id="registerPassword" placeholder="Password" required>
                     <button type="button" id="signUpBtn">Registrarse</button>
                 </form>
